# TruckTel

./: .clang-format  .pre-commit-config.yaml  .yamllint.yaml  CMakeLists.txt  LICENSE  README.md  api.md  main.cpp  run.sh  test.py  trucktel.cpp
.github/workflows/: build.yaml
bundled/trucktel/: LICENSE  config.yaml
bundled/trucktel/your-app-name/www/: index.html
doc/: app.md  contributing.md  debugging.md  internals.md  troubleshooting.md
dummy/: README.md
dummy/plugins/trucktel/: config.yaml
dummy/plugins/trucktel/www/: error_404.html
examples/NuxtTruckTelExample/: README.md  package-lock.json  package.json
examples/NuxtTruckTelExample/app/: app.vue  trucktel.js  trucktel.ts
examples/NuxtTruckTelExample/trucktel/: config.yaml
landing/: README.md  bundle.py  nuxt.config.ts  package-lock.json  package.json
landing/app/: app.vue
landing/app/components/: appDialog.vue
landing/app/pages/: index.vue
landing/app/types/: info.ts
landing/include/placeholder/: landing_data.h
landing/include/real/: .gitignore
landing/public/api/: info.json
src/: api.h  config.cpp  config.h  input.cpp  input.h  json_utils.cpp  json_utils.h  license.h  logger.cpp  logger.h  os_utils.cpp  os_utils.h  server.cpp  server.h  trucktel.cpp  version.h.in  worker.h
src/dummy/: main.cpp
src/landing/: config.cpp  config.h  info.cpp  info.h  server.cpp  server.h  server_thread.cpp  server_thread.h
src/mdns/: config.cpp  config.h  mdns.h  server.cpp  server.h  server_thread.cpp  server_thread.h  string_table.cpp  string_table.h
src/recorder/: channel.cpp  channel.h  configuration.cpp  configuration.h  event.cpp  event.h  recorder.cpp  recorder.h  versioned.cpp  versioned.h
src/server/: api.h  config.cpp  config.h  database.cpp  database.h  http.cpp  http.h  server.cpp  server.h  server_thread.cpp  server_thread.h  url.cpp  url.h  websocket.cpp  websocket.h  wspp_config.h
utils/: websocket.py
